[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtu-test"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "DaneSlattery", email = "dane_s@umantec.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click", "pymodbus[serial]",
]

[project.urls]
Documentation = "https://github.com/DaneSlattery/rtu-test#readme"
Issues = "https://github.com/DaneSlattery/rtu-test/issues"
Source = "https://github.com/DaneSlattery/rtu-test"

[project.scripts]
rtu-test = "rtu_test.cli:rtu_test"

[tool.hatch.version]
path = "src/rtu_test/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/rtu_test tests}"

[tool.coverage.run]
source_pkgs = ["rtu_test", "tests"]
branch = true
parallel = true
omit = [
  "src/rtu_test/__about__.py",
]

[tool.coverage.paths]
rtu_test = ["src/rtu_test", "*/rtu-test/src/rtu_test"]
tests = ["tests", "*/rtu-test/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
